Adding front end code

--- a/src/botgok_server/ui/templates/index.html
+++ b/src/botgok_server/ui/templates/index.html
@@ -1,8 +1,10 @@
 <html>
     <head>
-
+        <link rel="stylesheet" href="/static/css/bootstrap.css">
+        <link rel="stylesheet" href="/static/css/bootstrap-theme.css">
     </head>
     <body>
-        Hopefully we can configure the bot from here someday!
+        <div id="container"></div>
+        <script type="text/javascript" src="/static/js/botgok_frontend.js"></script>
     </body>
 </html>
