Adding favicon to suppress errors

--- a/src/game_bot/server/ui/templates/index.html
+++ b/src/game_bot/server/ui/templates/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html lang="">
     <head>
+        <link rel="icon" type="image/png" href="{{ url_for('static', filename='images/favicon-32.png') }}" />
     </head>
     <body>
         <div id="container"></div>
