Making bigger changes

--- a/src/game_bot/server/ui/templates/index.html
+++ b/src/game_bot/server/ui/templates/index.html
@@ -2,6 +2,7 @@
 <html lang="">
     <head>
         <link rel="icon" type="image/png" href="{{ url_for('static', filename='images/favicon-32.png') }}" />
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.min.css') }}"/>
     </head>
     <body>
         <div id="container"></div>
