--- a/src/game_bot/server_ui/components/App.css
+++ b/src/game_bot/server_ui/components/App.css
@@ -1,3 +1,26 @@
 :global(body) {
     background-color: #ffffff;
 }
+
+:local .content-panel p {
+    margin-bottom: 15px;
+}
+
+:local .big-shoutout {
+    font-size: 36px;
+    font-style: italic;
+}
+
+:local .instruction-section {
+    margin-bottom: 36px;
+}
+
+:local .fade-overlay {
+    z-index:9999;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #FFFFFF;
+}
