Okay, really got animations working this time through react-router-transition

--- a/src/game_bot/server_ui/components/App.css
+++ b/src/game_bot/server_ui/components/App.css
@@ -24,3 +24,12 @@
     height: 100%;
     background-color: #FFFFFF;
 }
+
+:global .animated-view-wrapper {
+    position: relative;
+}
+
+:global .animated-view-wrapper > div {
+    position: absolute;
+    width: 100%;
+}
